feat: login with google

--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,7 @@ AWS_SECRET_ACCESS_KEY=your_aws_secret_key
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=your_bucket_name
 AWS_URL=your_aws_url
+
+GOOGLE_CLIENT_ID=gg-client-id
+GOOGLE_CLIENT_SECRET=gg-client-secret
+GOOGLE_REDIRECT_URL=gg-direct
