Complete verify email

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=LearnTOEIC
 APP_ENV=local
 APP_KEY=base64:1aKe79aD1ROBe8kicUax6lfFJFchIS2AghyLFk+aIJs=
 APP_DEBUG=true
@@ -13,7 +13,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=toeicclass
 DB_USERNAME=root
-DB_PASSWORD=root 
+DB_PASSWORD=123456 
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -29,12 +29,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_HOST=live.smtp.mailtrap.io
+MAIL_PORT=587
+MAIL_USERNAME=api
+MAIL_PASSWORD=bdf5f1c80bf0e5ac489a4e37cb0dca38
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="noreply@demomailtrap.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
