--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=LearnTOEIC
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:1aKe79aD1ROBe8kicUax6lfFJFchIS2AghyLFk+aIJs=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=study_toeic
+DB_DATABASE=toeicclass
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=123456 
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -29,12 +29,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_HOST=live.smtp.mailtrap.io
+MAIL_PORT=587
+MAIL_USERNAME=api
+MAIL_PASSWORD=bdf5f1c80bf0e5ac489a4e37cb0dca38
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="noreply@demomailtrap.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -56,13 +56,3 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
-AWS_ACCESS_KEY_ID=your_aws_access_key
-AWS_SECRET_ACCESS_KEY=your_aws_secret_key
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=your_bucket_name
-AWS_URL=your_aws_url
-
-GOOGLE_CLIENT_ID=gg-client-id
-GOOGLE_CLIENT_SECRET=gg-client-secret
-GOOGLE_REDIRECT_URL=gg-direct
