--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=toeicclass
 DB_USERNAME=root
-DB_PASSWORD=123456 
+DB_PASSWORD=root 
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -32,7 +32,7 @@ MAIL_MAILER=smtp
 MAIL_HOST=live.smtp.mailtrap.io
 MAIL_PORT=587
 MAIL_USERNAME=api
-MAIL_PASSWORD=bdf5f1c80bf0e5ac489a4e37cb0dca38
+MAIL_PASSWORD=8829558af07d7a4c7e1d55e232e0029c
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS="noreply@demomailtrap.com"
 MAIL_FROM_NAME="${APP_NAME}"
