--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "aws/aws-sdk-php": "^3.330",
         "barryvdh/laravel-cors": "^3.0",
         "guzzlehttp/guzzle": "^7.9",
         "laravel/framework": "^9.19",
