--- a/.env
+++ b/.env
@@ -13,9 +13,9 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=toeicclass
 DB_USERNAME=root
-DB_PASSWORD=root
+DB_PASSWORD=123456
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
@@ -37,13 +37,13 @@ MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS="noreply@demomailtrap.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
+PUSHER_APP_ID=1903086
+PUSHER_APP_KEY=61d1f7d101838f6c046d
+PUSHER_APP_SECRET=b837b791d9a161a76d00
 PUSHER_HOST=
 PUSHER_PORT=443
 PUSHER_SCHEME=https
-PUSHER_APP_CLUSTER=mt1
+PUSHER_APP_CLUSTER=ap1
 
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
