--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/socialite": "^5.16",
         "laravel/tinker": "^2.7",
         "league/flysystem-aws-s3-v3": "^3.29",
-        "maatwebsite/excel": "3.1.57"
+        "maatwebsite/excel": "3.1.57",
+        "munafio/chatify": "^1.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
