--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=toeicclass
 DB_USERNAME=root
-DB_PASSWORD=123456
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
@@ -44,6 +44,8 @@ PUSHER_HOST=
 PUSHER_PORT=443
 PUSHER_SCHEME=https
 PUSHER_APP_CLUSTER=ap1
+
+
 
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
